--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - python/install-deps
       - python/save-cache
       - run:
-          command: pytest -q tests.py
+          command: /home/circleci/.local/bin/pytest -q tests.py
           name: Test
 
 workflows:
