--- a/.github/workflows/publish-to-test-pypi.yaml
+++ b/.github/workflows/publish-to-test-pypi.yaml
@@ -23,6 +23,6 @@ jobs:
           repository_url: https://test.pypi.org/legacy/
       - name: Publish distribution 📦 to PyPI
         if: startsWith(github.ref, 'refs/tags')
-        uses: pypa/gh-action-pypi-publish@1.4.1
+        uses: pypa/gh-action-pypi-publish@v1.4.1
         with:
           password: ${{ secrets.pypi_password }}
