--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,8 +1,8 @@
 name: Publish Python 🐍 distributions 📦 to PyPI
 on:
   push:
-    branches:
-      - master
+    tags:        
+      - '*'
 jobs:
   build-n-publish:
     name: Build and publish Python 🐍 distributions 📦 to PyPI
