--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
 httpx==0.16.1
+websockets==8.1
+
+# Documentation
+mkdocs
+mkdocs-material
+mkdocstrings
+
+# Testing
 pytest==6.2.1
 pytest-asyncio==0.14.0
-websockets==8.1
