--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "kraky"
-version = "2021.08"
+version = "2021.10.19"
 description = "Python asyncio client for Kraken API REST and Kraken Websockets API using httpx and websockets"
 authors = ["Atem18 <contact@atemlire.io>"]
 license = "MIT"
@@ -18,6 +18,7 @@ classifiers = [
 python = "^3.7"
 httpx = "^0.18.2"
 websockets = "^9.1"
+typer = "^0.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
@@ -25,6 +26,10 @@ pytest-asyncio = "^0.15.1"
 mkdocs = "^1.2.2"
 mkdocs-material = "^7.2.4"
 mkdocstrings = "^0.15.2"
+black = "^21.9b0"
+
+[tool.poetry.scripts]
+kraky = 'kraky.cli:app'
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
