--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,5 +20,9 @@ jobs:
         run: poetry install
       - name: Build package
         run: poetry build
+      - name: Config Test PyPI url
+        run: poetry config repositories.testpypi https://test.pypi.org/legacy/
+      - name: Config Test Pypi token
+        run: poetry config pypi-token.testpypi ${{ secrets.test_pypi_password }}
       - name: Publish distribution 📦 to Test PyPI
-        run: poetry publish -r testpypi -p ${{ secrets.test_pypi_password }}
+        run: poetry publish -r testpypi
