--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,11 +1,8 @@
-name: Publish Python 🐍 distributions 📦 to TestPyPI
-on:
-  push:
-    branches:        
-      - master
+name: Test Kraky
+on: [push, pull_request]
 jobs:
-  build-n-publish:
-    name: Build and publish Python 🐍 distributions 📦 to TestPyPI
+  pytest:
+    name: Run tests
     runs-on: ubuntu-18.04
     steps:
       - name: Checkout
@@ -16,13 +13,5 @@ jobs:
           python-version: 3.7
       - name: Install Poetry
         run: python -m pip install poetry --user
-      - name: Install dependencies
-        run: poetry install
-      - name: Build package
-        run: poetry build
-      - name: Publish distribution 📦 to Test PyPI
-        uses: pypa/gh-action-pypi-publish@v1.4.2
-        with:
-          password: ${{ secrets.test_pypi_password }}
-          repository_url: https://test.pypi.org/legacy/
-          skip_existing: true
+      - name: Run pytest
+        run: poetry run pytest tests.py
