--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,5 +13,7 @@ jobs:
           python-version: 3.7
       - name: Install Poetry
         run: python -m pip install poetry --user
+      - name: Install dev dependencies
+        run: poetry install
       - name: Run pytest
         run: poetry run pytest tests.py
