--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,16 +4,19 @@ jobs:
   pytest:
     name: Run tests
     runs-on: ubuntu-18.04
+    strategy:
+      matrix:
+        python: ["3.7", "3.8", "3.9"]
     steps:
       - name: Checkout
         uses: actions/checkout@v2.4.0
       - name: Set up Python 3.7
         uses: actions/setup-python@v2
         with:
-          python-version: 3.7
+          python-version: ${{ matrix.python }}
       - name: Install Poetry
         run: python -m pip install poetry --user
       - name: Install dev dependencies
         run: poetry install
-      - name: Run pytest
-        run: poetry run pytest tests.py
+      - name: Run Tox
+        run: poetry run tox
