--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2.4.0
-      - name: Set up Python 3.7
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python }}
@@ -19,4 +19,4 @@ jobs:
       - name: Install dev dependencies
         run: poetry install
       - name: Run Tox
-        run: poetry run tox
+        run: poetry run tox -e py
