--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "kraky"
-version = "2023.01.11"
+version = "2023.02.22"
 description = "Python client for Kraken API REST and Kraken Websockets API using httpx and websockets. Supports both sync and async for API REST."
 authors = ["Atem18 <contact@atemlire.io>"]
 license = "MIT"
@@ -16,21 +16,22 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.7"
-httpx = "^0.23.1"
+httpx = "^0.23.3"
 websockets = "^10.4"
-typer = "^0.7.0"
-tox = "^3.24.4"
+typer = {extras = ["all"], version = "^0.7.0"}
+python-dotenv = "^0.21.1"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.scripts]
+kraky = 'kraky.cli:app'
+
+[tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"
 pytest-asyncio = "^0.20.0"
 mkdocs = "^1.2.2"
 mkdocs-material = "^9.0.0"
 mkdocstrings = "^0.19.0"
-black = "^21.9b0"
-
-[tool.poetry.scripts]
-kraky = 'kraky.cli:app'
+black = "^23.1.0"
+tox = "^4.4.6"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
