--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.8"
 httpx = ">=0.23.3,<0.25.0"
 websockets = ">=10.4,<12.0"
 typer = {extras = ["all"], version = ">=0.7,<0.10"}
@@ -32,6 +32,7 @@ mkdocs-material = "^9.0.0"
 mkdocstrings = ">=0.19,<0.23"
 black = "^23.1.0"
 tox = "^4.4.6"
+pre-commit = "^3.3.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
