--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 skipsdist = true
-envlist = py37, py38, py39, py310, py311
+envlist = py38, py39, py310, py311
 
 [testenv]
 allowlist_externals = poetry
