--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,17 +2,21 @@ site_name: Kraky
 site_description: Python asyncio client for Kraken API REST and Kraken Websockets API using httpx and websockets
 
 theme:
-  name: 'material'
+  name: "material"
 
 repo_name: atem18/kraky
 repo_url: https://github.com/atem18/kraky
 edit_uri: ""
 
 nav:
-  - Introduction: 'index.md'
-  - API: 'api.md'
-  - WS: 'ws.md'
+  - Introduction: "index.md"
+  - API: "api.md"
+  - WS: "ws.md"
 
 plugins:
   - search
-  - mkdocstrings
+  - mkdocstrings:
+      default_handler: python
+      handlers:
+        python:
+          paths: [kraky]
