--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,13 +28,13 @@ python-dotenv = ">=0.21.1,<1.1.0"
 kraky = 'kraky.cli:app'
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.0.0"
+pytest = "^7.4.0"
 pytest-asyncio = ">=0.20,<0.22"
-mkdocs = "^1.2.2"
-mkdocs-material = "^9.0.0"
-mkdocstrings = ">=0.19,<0.23"
-black = "^23.1.0"
-tox = "^4.4.6"
+mkdocs = "^1.5.2"
+mkdocs-material = "^9.1.21"
+mkdocstrings = {extras = ["python"], version = "^0.22.0"}
+black = "^23.7.0"
+tox = "^4.9.0"
 pre-commit = "^3.3.3"
 
 [build-system]
