--- a/.github/workflows/publish-test.yaml
+++ b/.github/workflows/publish-test.yaml
@@ -1,7 +1,7 @@
 name: Publish Python 🐍 distributions 📦 to TestPyPI
 on:
   push:
-    branches:        
+    branches:
       - main
 jobs:
   build-n-publish:
@@ -9,17 +9,15 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v3.3.0
+        uses: actions/checkout@v3.5.3
       - name: Set up Python 3.9
         uses: actions/setup-python@v4
         with:
           python-version: 3.9
-      - name: Install Poetry
-        run: python -m pip install poetry --user
-      - name: Install dependencies
-        run: poetry install
+      - name: Install build dependencies
+        run: pip install -r requirements/build-requirements.txt
       - name: Build package
-        run: poetry build
+        run: hatch build
       - name: Publish distribution 📦 to Test PyPI
         uses: pypa/gh-action-pypi-publish@v1.8.10
         with:
