--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,25 +1,23 @@
 name: Publish Python 🐍 distributions 📦 to PyPI
 on:
   push:
-    tags:        
-      - '*'
+    tags:
+      - "*"
 jobs:
   build-n-publish:
     name: Build and publish Python 🐍 distributions 📦 to PyPI
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v3.3.0
+        uses: actions/checkout@v3.5.3
       - name: Set up Python 3.9
         uses: actions/setup-python@v4
         with:
           python-version: 3.9
-      - name: Install Poetry
-        run: python -m pip install poetry --user
       - name: Install dependencies
-        run: poetry install
+        run: pip install -r requirements/build-requirements.txt
       - name: Build package
-        run: poetry build
+        run: hatch build
       - name: Publish distribution 📦 to PyPI
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@v1.8.10
