--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,6 @@ skipsdist = true
 envlist = py38, py39, py310, py311
 
 [testenv]
-allowlist_externals = poetry
 commands =
-    poetry install
-    poetry run pytest
+    pip install -r requirements/test-requirements.txt
+    pytest
