--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,12 @@ dependencies = [
 [project.optional-dependencies]
 dev = ["pre-commit >=2.17.0,<4.0.0", "ruff == 0.0.284", "mypy == 1.5.0"]
 
-doc = ["mkdocs == 1.5.2", "mkdocs-material == 9.1.21", "mkdocstrings == 0.22.0"]
+doc = [
+    "mkdocs == 1.5.2",
+    "mkdocs-material == 9.1.21",
+    "mkdocstrings == 0.22.0",
+    "mkdocstrings-python == 1.3.0",
+]
 
 test = ["pytest == 7.4.0", "tox == 4.7.0"]
 
