use pip editible install after poetry removal

--- a/tox.ini
+++ b/tox.ini
@@ -5,4 +5,5 @@ envlist = py38, py39, py310, py311
 [testenv]
 commands =
     pip install -r requirements/test-requirements.txt
+    pip install -e .
     pytest
