--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,11 +1,11 @@
-name: Publish Python 🐍 distributions 📦 to TestPyPI
+name: Publish Python 🐍 distributions 📦 to PyPI
 on:
   push:
-    branches:
-      - main
+    tags:        
+      - '*'
 jobs:
   build-n-publish:
-    name: Build and publish Python 🐍 distributions 📦 to TestPyPI
+    name: Build and publish Python 🐍 distributions 📦 to PyPI
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
@@ -14,13 +14,12 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.9
-      - name: Install build dependencies
+      - name: Install dependencies
         run: pip install -r requirements/build-requirements.txt
       - name: Build package
         run: hatch build
-      - name: Publish distribution 📦 to Test PyPI
+      - name: Publish distribution 📦 to PyPI
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@v1.8.10
         with:
-          password: ${{ secrets.test_pypi_password }}
-          repository_url: https://test.pypi.org/legacy/
-          skip_existing: true
+          password: ${{ secrets.pypi_password }}
