--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,4 +1,4 @@
-name: Test Kraky, build and publish to TestPypi
+name: Test Kraky
 on: [pull_request]
 jobs:
   pytest:
@@ -18,26 +18,3 @@ jobs:
         run: pip install -r requirements/test-requirements.txt
       - name: Run Tox
         run: tox -e py
-  build-n-publish:
-    name: Build and publish Python 🐍 distributions 📦 to TestPyPI
-    runs-on: ubuntu-20.04
-    permissions:
-      contents: read
-      id-token: write
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Set up Python 3.9
-        uses: actions/setup-python@v5
-        with:
-          python-version: 3.9
-      - name: Install build dependencies
-        run: pip install -r requirements/build-requirements.txt
-      - name: Build package
-        run: hatch build
-      - name: Publish distribution 📦 to Test PyPI
-        uses: pypa/gh-action-pypi-publish@v1.8.14
-        with:
-          password: ${{ secrets.test_pypi_password }}
-          repository-url: https://test.pypi.org/legacy/
-          skip-existing: true
