--- a/.github/workflows/test-publish.yaml
+++ b/.github/workflows/test-publish.yaml
@@ -1,25 +1,29 @@
 name: Test Kraky
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 jobs:
   build-n-publish:
     name: Build and publish Python 🐍 distributions 📦 to TestPyPI
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     permissions:
       contents: read
       id-token: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Set up Python 3.9
+      - name: Set up Python 3.10
         uses: actions/setup-python@v5
         with:
-          python-version: 3.9
+          python-version: 3.10
+      - name: Install uv
+        uses: astral-sh/setup-uv@v1
+        with:
+          enable-cache: true
       - name: Install build dependencies
-        run: pip install -r requirements/build-requirements.txt
+        run: uv pip install -r requirements/build-requirements.txt
       - name: Build package
-        run: hatch build
+        run: uv run hatch build
       - name: Publish distribution 📦 to Test PyPI
         uses: pypa/gh-action-pypi-publish@v1.10.0
         with:
