--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -19,7 +19,7 @@ jobs:
         with:
           enable-cache: true
       - name: Install dependencies
-        run: uv pip install -r requirements/build-requirements.txt
+        run: uv pip install --system -r requirements/build-requirements.txt
       - name: Build package
         run: uv run hatch build
       - name: Publish distribution 📦 to PyPI
