--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -19,6 +19,6 @@ jobs:
         with:
           enable-cache: true
       - name: Install test dependencies
-        run: uv pip install -r requirements/test-requirements.txt
+        run: uv pip install --system -r requirements/test-requirements.txt
       - name: Run tox targets for ${{ matrix.python-version }}
         run: un run tox run -f py$(echo ${{ matrix.python-version }} | tr -d .)
