--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -20,5 +20,5 @@ jobs:
           enable-cache: true
       - name: Install test dependencies
         run: uv pip install --system -r requirements/test-requirements.txt
-      - name: Run tox targets for ${{ matrix.python-version }}
-        run: uv run tox run -f py$(echo ${{ matrix.python-version }} | tr -d .)
+      - name: Run tox targets for ${{ matrix.python }}
+        run: uv run tox run -f py$(echo ${{ matrix.python }} | tr -d .)
