--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,23 +1,27 @@
 name: Publish Python 🐍 distributions 📦 to PyPI
 on:
   push:
-    tags:        
-      - '*'
+    tags:
+      - "*"
 jobs:
   build-n-publish:
     name: Build and publish Python 🐍 distributions 📦 to PyPI
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Set up Python 3.9
+      - name: Set up Python 3.10
         uses: actions/setup-python@v5
         with:
-          python-version: 3.9
+          python-version: 3.10
+      - name: Install uv
+        uses: astral-sh/setup-uv@v1
+        with:
+          enable-cache: true
       - name: Install dependencies
-        run: pip install -r requirements/build-requirements.txt
+        run: uv pip install --system -r requirements/build-requirements.txt
       - name: Build package
-        run: hatch build
+        run: uv run hatch build
       - name: Publish distribution 📦 to PyPI
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@v1.10.0
